implementando a função que verifica o sucesso da solução (sucessAmount)

--- a/README.me
+++ b/README.me
@@ -1,6 +1,6 @@
 Autores: Renato Douglas Zembrani
         Raphael Marcos Huss Pennacchi
-        Renan Bernardi
+        Renan Moretto Bernardi
 
 Trabalho sobre programação genética para a matéria de Inteligência Artifical
 
