Crossover, ainda com erros

--- a/README.me
+++ b/README.me
@@ -17,9 +17,18 @@ Os valores estão na sequencia:
 
 Quantidade de população
 Quantidade de interações
-Quantidades de pares de nós que devem ser alterados na mutação
+Quantidades de elementos que devem ser alterados na mutação
 Quantidade de soluções que devem persistir para a próxima geração (pega da melhor para a pior)
 Qual o arquivo de teste (se colocar 1 irá selecionar o trainning1.txt)
 Qual a profundidade da árvore
 Conjunto de operadores
 Conjunto de valores
+
+
+
+A fazer:
+
+Adicionar chance de criar subtrees ou de remover
+Adicionar crossover de 90%
+Adicionar mutação de 5%
+Criar torneios para escolher pais de forma mais simples.v+
